saves photo to garments db

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://postgres:postgres@localhost:5432/throwin_fits
 JWT_SECRET_KEY=O1I+P8fitwWdMipN9hClcb2+6sCNDBEKOqmqPMjsLt8=
+FLASK_ENV=development
